+mustafa |midway-fixing design issues, change font-family, fixing alignment in pages

--- a/src/app/invoice/preview/invoice.preview.component.css
+++ b/src/app/invoice/preview/invoice.preview.component.css
@@ -1,16 +1,19 @@
 .flex-container {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  flex-flow: row wrap;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    flex-flow: row wrap;
 }
-.table.basic tbody tr td{
+
+
+/* .table.basic tbody tr td{
   background-color: #fff;
 }
 .table.basic .table tbody tr td{
   border: none;
-}
-.mh18_img img{
-  max-height: 20px;
-  cursor: pointer
+} */
+
+.mh18_img img {
+    max-height: 20px;
+    cursor: pointer
 }
